# sqlite3odbc

./: CMakeLists.txt  mingw-cross-build.sh
